force-app/main/default/objects/Program_Change_Need__c/Program_Change_Need__c.object-meta.xml
<CustomObject>
    <label>Program Change Need</label>
    <nameField>
        <displayFormat>PCN-{0000000}</displayFormat>
        <label>Program Change Need Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Change Needs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>