force-app/main/default/objects/Program_Change_Need__c/fields/Description_of_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Suggestion__c</fullName>
    <label>Description of Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>