force-app/main/default/objects/Program_Change_Need__c/fields/Purpose_and_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Purpose_and_Improvement__c</fullName>
    <label>Purpose and Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>